chore(certificate-summary): Fixed adaptive content overflow.

--- a/src/components/certificate-summary/certificate-summary.css
+++ b/src/components/certificate-summary/certificate-summary.css
@@ -92,5 +92,6 @@
   .basic_meta {
     flex-basis: 100%;
     padding: 20px 0;
+    min-width: auto;
   }
 }
